force-app/main/default/objects/BackendTransaction__c/BackendTransaction__c.object-meta.xml
<CustomObject>
    <label>Backend Transaction</label>
    <nameField>
        <label>BackendTransaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backend Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>