force-app/main/default/objects/BackendTransaction__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Backend Transactions</relationshipLabel>
    <relationshipName>Backend_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>