force-app/main/default/objects/BackendTransaction__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>StatusCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>