force-app/main/default/objects/BackendTransaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan__c</columns>
    <columns>Loan_Name__c</columns>
    <columns>Message__c</columns>
    <columns>Operation__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>